--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ body {
 
 .menu_inner li {
 	padding-left: 10px;
-	padding-right 10px;
+	padding-right: 10px;
 }
 
 .header_right{
@@ -64,5 +64,5 @@ body {
     flex: 1 auto;
     align-items: center;
     justify-content: center;
-    margin: 50px 0;
+    margin: 0px 0;
 }
