--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 	margin: 0 auto;
 	padding: 10px;
 	
-	width: 10%;
+	width: 100vw;
 	-webkit-box-shadow: 0 6px 4px -6px black;
 	   -moz-box-shadow: 0 6px 4px -6px black;
 	        box-shadow: 0 6px 4px -6px black;
@@ -48,7 +48,7 @@ body {
 }
 
 .header_inner{
-	width: 100%;
+	width: 70%;
 	margin-left: auto;
 	margin-right: auto;
 }
